Fix Name Z-index

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,7 +15,7 @@ body {
     // left: 50%;
     // top: 3vmin;
     
-    z-index: 90000;
+    z-index: 100;
 
     animation: draw-letters-fill 0.5s ease-in forwards 2s;
     //   height: 100%;
